# qpc

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  GPL.txt  LICENSE  LICENSE.md  LICENSE.txt  QuantumLeaps.qpc.pdsc  README.md  README.txt  README.url  cmakeSupport.md  copying.txt  documentation.html  qpc.md5  qpc.qm  qpc.sha1  qpc.sha256  qpc_8.0.1.sha1  qpc_8.0.2.sha1  qpc_8.0.3.sha1  qpc_8.0.4.sha1  qpc_8.0.5.sha1  qpc_8.1.0.sha1  qpc_8.1.1.sha1  qpc_8.1.2.sha1  qpc_8.1.3.sha1  qpc_8.1.4.sha1  qpc_8.1.5.sha256  qpc_md5.bat  qpc_sdk_init.cmake  qpc_sha1.bat  sha1.bat  sha256.bat  version-5.4.0  version-5.4.1  version-5.4.2  version-5.5.0  version-5.5.1  (+43 more)
.github/ISSUE_TEMPLATE/: config.yml
LICENSES/: License.txt  LicenseRef-QL-commercial.txt  LicenseRef-QL-dual.qlc  QM-EVAL-QPC.qlc  QP-Arduino_GPL_Exception.txt  QP-RasPi_GPL_Exception.txt  QP-mbed_GPL_Exception.txt
doxygen/: Doxyfile  Doxyfile-CERT  Doxyfile-CHM  Doxyfile-DOC  Doxyfile-LATEX  Doxyfile-TST  Doxyfile.gen  DoxygenLayout.xml  ab.dox  about.cc  about.dox  api.dox  concepts.cc  config.h  design.cc  design.dox  dir.dox  doxygen.xml  exa.cc  exa.dox  exa_apps.dox  exa_mware.dox  exa_native.dox  exa_os.dox  exa_qutest.dox  exa_rtos.cc  exa_rtos.dox  footer.html  gs.dox  header.html  help.dox  history.cc  history.dox  lint.dox  log.txt  macros.h  main.cc  main.dox  make - Copy.bat  make.bat  (+35 more)
doxygen/def/: doxygen.def
doxygen/images/: qxk_ctx-switch.vsd
doxygen/img/: img.htm
doxygen/scripts/: jquery.plugins.min.js  ql.js
doxygen/snippets/: qa_run.c  qep_qevent.c  qep_qevt.c  qep_qfsm.c  qep_qfsm_ctor.c  qep_qfsm_use.c  qep_qhist.c  qep_qhsm.c  qep_qhsm_ctor.c  qep_qhsm_use.c  qep_qinit.c  qep_qmsm.c  qep_qmsm_ctor.c  qep_qmsm_use.c  qep_qsuper.c  qep_qtran.c  qf_ctor.c  qf_main.c  qf_oncontextsw.c  qf_post.c  qf_postx.c  qf_qactive.c  qf_qmactive.c  qf_start.c  qf_state.c  qf_subscribe.c  qf_tevt.c  qf_tick.c  qf_ticker.c  qf_tickx.c  qf_version.c  qk_lock.c  qk_mux.c  qk_oncontextsw.c  qmp_init.c  qmp_use.c  qs_ap.c  qs_filter.c  qs_objArrDic.c  qs_objDic.c  (+14 more)
examples/: README.url
examples/arm-cm/: README.md  README.url
examples/arm7-9/: README.url
examples/avr/: README.url
examples/cmsis-rtx/: README.txt  README.url
examples/embos/: README.url
examples/emwin/: README.url
examples/esp-idf/dpp-esp32devkitc/components/qp-c/: CMakeLists.txt  Kconfig
examples/freertos/: README.url
examples/lwip/: README.url
examples/msp430/: README.url
examples/posix/: README.txt  README.url
examples/posix-win32/: README.md
examples/posix-win32-gui_cmake/dpp/: CMakeLists.txt  CMakePresets.json  Makefile  Makefile_t  Resource.rc  bsp-gtk.c  bsp.c  bsp.h  dpp-gui.sln  dpp-gui.vcxproj  dpp-gui.vcxproj.filters  dpp.vcxproj.filters  dppImages.xml  main.c  qp_config.h  resource.h
examples/posix-win32-gui_cmake/dpp/qutest/: bsp.c  test_dpp.c  test_dpp_tick.py  test_philo.c  test_philo.py  test_philo_init.py  test_table.c
examples/posix-win32/dpp/: CMakeLists.txt  CMakePresets.json  Makefile  bsp.h  dpp.vcxproj  dpp.vcxproj.filters
examples/posix-win32/dpp/qview/: dpp.py  dpp1.py  qview-dpp.lnk
examples/qwin-gui/: README.md
examples/qwin-gui/dpp-gui/: CMakeLists.txt  CMakePresets.json  Resource.rc  bsp.c  dpp-gui.vcxproj  dpp-gui.vcxproj.filters
examples/threadx/: README.url
examples/ti-rtos/: README.txt  README.url
examples/ucos-ii/: README.url
examples/win32/: README.txt  README.url
examples/win32-qv/: README.url
examples/workstation/: README.txt
examples/zephyr/blinky/: CMakeLists.txt  README.md  README.rst  prj.conf
examples/zephyr/blinky/src/: blinky.c  blinky.h  bsp.c  bsp.h  main.c  qp_config.h
include/: README.md  au-ds.lnt  au-misra2.lnt  au-misra3.lnt  lib-qpc.lnt  qassert.h  qep.h  qequeue.h  qevt.h  qf.h  qf_pkg.h  qk.h  qmpool.h  qp.h  qp_pkg.h  qp_port.h  qpc.h  qpc.lnt  qpset.h  qs.h  qs_dummy.h  qs_pkg.h  qsafe.h  qstamp.c  qstamp.h  quit.h  qv.h  qvanilla.h  qxk.h  qxk_pkg.h  qxthread.h  std.lnt  stdint_c.h
ports/: CMakeLists.txt  README.md  README.url
ports/arm-cm/: CMakeLists.txt  README.md  README.txt  README.url
ports/arm-cr/: CMakeLists.txt
ports/arm7-9/: README.txt  README.url
ports/avr/: README.txt  README.url
ports/cmsis-rtx/: README.txt  README.url  qf_port.c  qf_port.h
ports/config/: qp_config.h
ports/embos/: CMakeLists.txt  README.txt  README.url  qep_port.h  qf_port.c  qf_port.h  qp_port.h  qs_port.h  syscalls.c
ports/esp-idf/: CMakeLists.txt  README.md  qep_port.h  qf_port.c  qf_port.h  qp_port.h  qs_port.h
ports/freertos/: CMakeLists.txt  README.txt  README.url  qep_port.h  qf_port.c  qf_port.h  qp_port.h  qs_port.h
ports/freertos-esp32/: qep_port.h  qf_port.c  qf_port.h
ports/lint/: README.url  lin.bat  lint_qep.txt  lint_qf.txt  lint_qk.txt  lint_qs.txt  lint_qv.txt  options.lnt  qep_port.h  qf_port.h  qk_port.h  qs_port.h  stdbool.h  stdint.h
ports/lint-plus/: au-barr.lnt  au-ds.lnt  au-misra3-amd1.lnt  au-misra3-amd2.lnt  au-misra3.lnt  au-misra4.lnt  au-ql-c99.lnt  lin.bat  make.bat  options.lnt  qep_port.h  ql-style.lnt  qpc.lnt  qs_port.h  std.lnt  stdbool.h  stdint.h  stdint_c.h
ports/lint-plus2/: au-misra3-amd1.lnt  au-misra3-amd2.lnt  au-misra3.lnt  lin2.bat  make.bat  metrics.csv  options.lnt  qpc.lnt  std.lnt
ports/msp430/: CMakeLists.txt  README.md  README.txt  README.url
ports/pic32/: CMakeLists.txt
ports/posix-fd/: CMakeLists.txt  README.md  qf_port.c  qp_port.h  qs_port.c  qs_port.h  safe_std.h
ports/posix-qutest/: CMakeLists.txt  Makefile  README.md  README.txt  qep_port.h  qf_port.h  qp_port.h  (+2 more)
source/: README.txt  qep_hsm.c  qep_msm.c  qf_act.c  qf_actq.c  qf_defer.c  qf_dyn.c  qf_mem.c  qf_pkg.h  qf_ps.c  qf_qact.c  qf_qeq.c  qf_qmact.c  qf_time.c  qk.c  qk_mutex.c  qk_pkg.h  qs.c  qs_64bit.c  qs_fp.c  qs_pkg.h  qs_rx.c  qutest.c  qv.c  qxk.c  qxk_mutex.c  qxk_pkg.h  qxk_sema.c  qxk_xthr.c
src/: CMakeLists.txt  qf_pkg.h  qs_pkg.h  qxk_pkg.h
test/: README.txt
tests/: safe-qp_check.pyi
zephyr/: CMakeLists.txt  Kconfig  README.md  qep_port.h  qf_port.c  qf_port.h  qp_port.h  qs_port.h
(+5415 files in other folders)
